fix layout shift on images and videos

--- a/src/components/message-list/styles.module.scss
+++ b/src/components/message-list/styles.module.scss
@@ -61,23 +61,24 @@
 
       .media-wrapper {
         width: 100%;
+        height: 100%;
         max-width: 220px;
+        max-height: 220px;
+        margin-bottom: 6px;
       }
 
       .img-preview {
-        margin-bottom: 6px;
         object-fit: contain;
-        width: auto;
-        height: auto;
-        max-height: 220px;
-        max-width: 100%;
+        width: 100%;
+        height: 100%;
         border-radius: 10px;
         cursor: pointer
       }
 
       .video-preview {
-        margin-bottom: 6px;
         cursor: pointer;
+        width: 100%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -93,10 +94,8 @@
         video {
           pointer-events: none;
           object-fit: contain;
-          width: auto;
-          height: auto;
-          max-height: 220px;
-          max-width: 100%;
+          width: 100%;
+          height: 100%;
           border-radius: 10px;
           position: relative;
         }
